# edu-sim

./: .env.example  .gitignore  CLAUDE.md  CODEMAP.md  GIT_PUSH_GUIDE.md  README.md  README_PROGRESS.md  demo_phase1.py  demo_phase2.py  pyproject.toml  test_item.txt
app/: __init__.py  cli.py  cli_display.py  config.py  edu_sim_cli.py  run_artifacts.py  visual_snapshots.py  web_dashboard.py
app/api/: __init__.py
app/core/: resource_loader.py
app/resources/: __init__.py
app/services/: __init__.py  calibration_service.py  entity_extractor.py  (+14 more)
docs/: CLI_USAGE_GUIDE.md  EDU_SIM_VISION.md  EDU_SIM_VS_MIROFISH.md  GRAPHIFY_INTEGRATION.md  GRAPHIFY_SUMMARY.md  LLM_PROVIDERS_GUIDE.md  PHASE1_QUICKSTART.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  REFACTORING_ARCHITECTURE.md  edu_sim_analysis_report.md  prd-agent-first-cli.md  重构计划.md
scripts/: analyze_teaching_match.py  build_edu_graph.py  build_edu_graph_v2.py  calibrate_irt.py  demo_graphify.py  design_intervention.py  edu_sim_mvp.py  generate_agent_profiles.py  generate_agent_profiles_v2.py  init_oasis_env.py  integrate_teachers.py  run_advanced_simulation.py  run_edu_simulation.py  run_parallel_simulation.py  run_reddit_simulation.py  run_reform_simulation.py  run_twitter_simulation.py  test_edu_pipeline.py  visualize_analysis.py
tests/: test_cli_artifacts_and_visuals.py  test_graphify_integration.py  test_homework_prediction.py  test_new_architecture.py  test_phase2_data_ingestion.py  test_phase3_simulation.py  test_phase4_services.py  test_phase5_cli.py  test_universal_llm.py
(+46 files in other folders)
